Fix low-contrast icon in default avatar header for better accessibility

--- a/src/client/app/item/comment/comment.component.scss
+++ b/src/client/app/item/comment/comment.component.scss
@@ -13,7 +13,7 @@
 		font-size: 40px;
 		height: 40px;
 		width: 40px;
-		opacity: 0.2;
+		opacity: 0.55;
 	}
 
 	.content {
