--- a/src/client/app/item/item/item.component.scss
+++ b/src/client/app/item/item/item.component.scss
@@ -27,7 +27,7 @@ $card-padding-override: 16px;
 				font-size: 40px;
 				height: 40px;
 				width: 40px;
-				opacity: 0.2;
+				opacity: 0.55;
 			}
 
 			.header-text-container {
